--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Wayne AI Assistant Chatbot</title>
-  <link rel="stylesheet" href="pages/style.css" />
+  <link rel="stylesheet" href="public/style.css" />
 </head>
 <body>
   <main class="chat-container">
@@ -18,6 +18,6 @@
     </form>
   </main>
 
-  <script src="pages/script.js"></script>
+  <script src="public/script.js"></script>
 </body>
 </html>
