--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Wayne AI Assistant Chatbot</title>
-  <link rel="stylesheet" href="public/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>WAYNE AI Assistant</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <main class="chat-container">
-    <header class="chat-header">
-      <h1>Wayne AI Assistant</h1>
-    </header>
-    <section id="chat-window" class="chat-window"></section>
-    <form id="chat-form" class="chat-form">
-      <input type="text" id="user-input" placeholder="Type your question..." autocomplete="off" required />
-      <button type="submit">Send</button>
-    </form>
-  </main>
+  <div class="app-container">
+    <!-- Sidebar -->
+    <div class="sidebar">
+      <h2>WAYNE AI</h2>
+      <button id="new-chat">+ New Chat</button>
+      <div id="history"></div>
+    </div>
 
-  <script src="public/script.js"></script>
+    <!-- Main Chat Interface -->
+    <div class="chat-container">
+      <div class="chat-body" id="chat-body">
+        <!-- Chat messages injected here -->
+      </div>
+
+      <form id="chat-form">
+        <input type="text" id="user-input" placeholder="Ask something..." autocomplete="off" />
+        <button type="submit">Send</button>
+      </form>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
