--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>WAYNE AI Assistant</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="public/style.css" />
 </head>
 <body>
   <div class="app-container">
@@ -28,6 +28,6 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="public/script.js"></script>
 </body>
 </html>
