--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WAYNE Chat Assistant</title>
-    <link rel="stylesheet" href="public/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -59,6 +59,6 @@
         </div>
     </div>
 
-    <script src="public/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
