--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WAYNE Chat Assistant</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href='assets/css/styles.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -59,6 +59,6 @@
         </div>
     </div>
 
-    <script src="assets/js/scripts.js"></script>
+    <script src='assets/js/scripts.js'></script>
 </body>
 </html>
