--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
   <script>
     // Redirect after 3 seconds
     setTimeout(() => {
-      window.location.href = 'public/index.html';
+      window.location.href = 'public/main.html';
     }, 3000);
 
     const statusTexts = [
