--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <script>
         window.addEventListener('load', function() {
             setTimeout(function() {
-                window.location.href = 'main.html';
+                window.location.href = 'public/main.html';
             }, 2000);
         });
     </script>
