--- a/public/main.html
+++ b/public/main.html
@@ -30,6 +30,6 @@
         </main>
     </div>
 
-    <script src="scripts/script.js" type="module"></script>
+    <script src="public/scripts/script.js" type="module"></script>
 </body>
 </html>
