--- a/public/main.html
+++ b/public/main.html
@@ -195,6 +195,6 @@
     <!-- Notification Toast -->
     <div class="toast" id="toast"></div>
 
-    <script src="scripts/script.ts" type="module"></script>
+    <script src="scripts/script.js" type="module"></script>
 </body>
                                                         </html>
