--- a/public/main.html
+++ b/public/main.html
@@ -51,7 +51,7 @@
                 <button class="mobile-menu-btn" id="mobile-menu-btn">
                     <i class="fas fa-bars"></i>
                 </button>
-                <h1 id="chat-title">WAYNE AI</h1>
+                <h1 id="chat-title">Chue Chue Ai</h1>
                 <div class="header-actions">
                     <button class="header-btn" id="dark-mode-toggle">
                         <i class="fas fa-moon"></i>
